Added playtimegoal create subcommand (in the previous commit)
Added new filter on playtime leaderboard: players with playtime.hidefromleaderboard permission will not be shown. This requires LuckPerms.